Fix z-index bug with blog logout dropdown menu

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -120,6 +120,11 @@ li {
 }
 
 /* =======================MAIN CONTENT STYLING======================= */
+
+header {
+  z-index: 1;
+}
+
 nav {
   display: flex;
   flex-direction: column;
@@ -349,6 +354,7 @@ nav {
 }
 
 .fileDivider {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -359,6 +365,16 @@ nav {
   /* max-height: 52px; */
   z-index: 0;
   box-shadow: 5px 10px 10px 0px #000000;
+}
+
+.fileDivider:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  background: #fdfdfd;
 }
 
 .blog__create-options {
@@ -398,16 +414,76 @@ nav {
   position: absolute;
   top: 42px;
   width: 100%;
-  border-right: 1px solid #cccccc;
-  border-left: 1px solid #cccccc;
-  border-bottom: 1px solid #cccccc;
+  /* border-right: 1px solid #cccccc; */
+  /* border-left: 1px solid #cccccc; */
+  /* border-bottom: 1px solid #cccccc; */
   list-style-type: none;
-  background: white;
-  padding: 0;
+  background: #fe9bba;
+  padding: 0 0 10px 0;
+  border-radius: 0 0 5px 5px;
 }
 
 .blog__profile-options--hidden {
   display: none;
+}
+
+/* .blog__login-options > *:nth-child(2) {
+  margin: 0px 10px 0px 0px;
+}
+
+.blog__login-options details {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.blog__login-options summary {
+  list-style-image: url('../assets/down-arrow.svg');
+  position: absolute;
+  top: 0px;
+}
+.blog__login-options details[open] summary {
+  list-style-image: url('../assets/up-arrow.svg');
+  position: absolute;
+  top: 5px;
+}
+
+.blog__login-options details[open] {
+}
+
+.blog__login-options summary::-webkit-details-marker {
+  background: url('../assets/down-arrow.svg');
+  color: transparent;
+  position: absolute;
+  top: 0px;
+}
+
+.blog__login-options details[open] summary::-webkit-details-marker {
+  background: url('../assets/up-arrow.svg');
+  position: absolute;
+  top: 5px;
+} */
+
+.blog-post__author-details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.blog-post__date-time-details {
+  display: flex;
+  flex-direction: row;
+}
+
+.blog-post__post-details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: #757575;
+}
+
+.blog-post__post-details > * {
+  margin: 0 0 0 10px;
 }
 
 .page-corner-nav {
@@ -494,65 +570,6 @@ nav {
   transform: scaleY(-1);
 }
 
-/* .blog__login-options > *:nth-child(2) {
-  margin: 0px 10px 0px 0px;
-}
-
-.blog__login-options details {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.blog__login-options summary {
-  list-style-image: url('../assets/down-arrow.svg');
-  position: absolute;
-  top: 0px;
-}
-.blog__login-options details[open] summary {
-  list-style-image: url('../assets/up-arrow.svg');
-  position: absolute;
-  top: 5px;
-}
-
-.blog__login-options details[open] {
-}
-
-.blog__login-options summary::-webkit-details-marker {
-  background: url('../assets/down-arrow.svg');
-  color: transparent;
-  position: absolute;
-  top: 0px;
-}
-
-.blog__login-options details[open] summary::-webkit-details-marker {
-  background: url('../assets/up-arrow.svg');
-  position: absolute;
-  top: 5px;
-} */
-
-.blog-post__author-details {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.blog-post__date-time-details {
-  display: flex;
-  flex-direction: row;
-}
-
-.blog-post__post-details {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  color: #757575;
-}
-
-.blog-post__post-details > * {
-  margin: 0 0 0 10px;
-}
-
 .main-image-browser {
   display: flex;
   flex-direction: row;
@@ -561,14 +578,15 @@ nav {
   align-items: center;
   width: 100%;
   background: #ffffff;
-  padding: 5px;
+  padding: 0.25em;
   margin-bottom: 10px;
   border-radius: 5px;
   border: 1px solid black;
 }
 
 .main-image-browser div {
-  margin-left: 5px;
+  margin-left: 0.25em;
+  margin-bottom: 0.25em;
 }
 
 .main-image-container {
@@ -577,7 +595,7 @@ nav {
   align-items: center;
   width: 100px;
   height: 100px;
-  /* background: blue; */
+  /* background: #cccccc; */
   border-radius: 5px;
   object-fit: contain;
   overflow: hidden;
@@ -642,6 +660,7 @@ nav {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+  z-index: 0;
 }
 
 .pageBreak {
@@ -853,6 +872,7 @@ nav {
   padding: 80px 80px 0em 80px;
   /* padding: 2.5em 5vw 0em 5vw; */
   box-shadow: 5px 10px 10px 0px #000000;
+  /* z-index: -1; */
 }
 
 .hiddenHeader {
