--- a/public/css/night.css
+++ b/public/css/night.css
@@ -124,6 +124,11 @@ li {
 }
 
 /* =======================MAIN CONTENT STYLING======================= */
+
+header {
+  z-index: 1;
+}
+
 nav {
   display: flex;
   flex-direction: column;
@@ -353,6 +358,7 @@ nav {
 }
 
 .fileDivider {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -363,6 +369,16 @@ nav {
   /* max-height: 52px; */
   z-index: 0;
   box-shadow: 5px 10px 10px 0px #000000;
+}
+
+.fileDivider:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  background: #3d465c;
 }
 
 .blog__create-options {
@@ -402,12 +418,13 @@ nav {
   position: absolute;
   top: 42px;
   width: 100%;
-  border-right: 1px solid #cccccc;
-  border-left: 1px solid #cccccc;
-  border-bottom: 1px solid #cccccc;
+  /* border-right: 1px solid #cccccc; */
+  /* border-left: 1px solid #cccccc; */
+  /* border-bottom: 1px solid #cccccc; */
   list-style-type: none;
-  background: white;
-  padding: 0;
+  background: #252d3e;
+  padding: 0 0 10px 0;
+  border-radius: 0 0 5px 5px;
 }
 
 .blog__profile-options--hidden {
